--- a/css/styles.css
+++ b/css/styles.css
@@ -83,22 +83,41 @@ body {
     flex-grow: 1;
 }
 
-.vehi-content {
+.content-section{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
 }
-
-.vehi-content input {
+.content-section input{
     width: 500px;
-    align-self: center;
     height: 30px;
     border-radius: 20px;
     text-align: center;
+    margin-left: 350px;
+    margin-top: 10px;
 }
-
+.content-section h2{
+    margin-top: 300px;
+    margin-left: 520px;
+}
+.content-section .btn1{
+    margin-left: 450px;
+    height: 40px;
+    width: 120px;
+    border-radius: 10px;
+}
+.content-section .btn2{
+    margin-left: 100px;
+    height: 40px;
+    width: 120px;
+    border-radius: 10px;
+}
+.content-section h1{
+    margin-top: 300px;
+    margin-left: 380px;
+}
+.content-section p{
+    margin-left: 500px;
+}
 #vehicleResults {
     display: flex;
     flex-wrap: wrap;
@@ -181,27 +200,55 @@ body {
 .parts-results {
     display: flex;
     flex-wrap: wrap;
-    gap: 190px;
-}
-
-.part-image {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    
-}
-
-
-.part {
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .part {
     border: 1px solid #ccc;
     padding: 10px;
-    width: calc(33.333% - 20px);
-    box-sizing: border-box;
-    background-color: #ddd;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.part h3:hover {
-    color: #007BFF;
-}
+    border-radius: 5px;
+    text-align: center;
+    max-width: 200px;
+  }
+  
+  .part img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .not-found {
+    color: red;
+    font-weight: bold;
+  }
+  .card {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    margin: 10px;
+    width: 200px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  .card-img {
+    width: 100%;
+    height: 140px;
+  }
+  
+  .card-details {
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .card-details h4 {
+    margin: 10px 0;
+    font-size: 16px;
+  }
+  
+  .card-details p {
+    margin: 5px 0;
+    color: #555;
+  }
+    
